--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,7 @@
             "browser": "src/main.ts",
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
-            "assets": ["src/favicon.ico", "src/assets"],
+            "assets": ["src/favicon.ico", "src/assets", "src/data/config.json"],
             "styles": ["src/custom-theme.scss", "src/styles.scss"],
             "scripts": []
           },
