--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cdk": "^16.2.14",
+    "@angular/animations": "^17.3.10", 
+    "@angular/cdk": "^17.3.10",
     "@angular/common": "^17.3.0",
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
     "@angular/forms": "^17.3.0",
-    "@angular/material": "^16.2.14",
+    "@angular/material": "^17.3.10",
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
